garde/tests/ui/compile-fail/length_bad_equal_combined.rs
#![allow(dead_code)]

#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(length(min = 1, equal = 10))]
    field: &'a str,
}

fn main() {}
