garde/tests/ui/compile-fail/length_bad_equal_combined.stderr
error: no `min` or `max` allowed if using `equal`
 --> tests/ui/compile-fail/length_bad_equal_combined.rs
  |
  |     #[garde(length(min = 1, equal = 10))]
  |                    ^^^
